<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/home_selector"
            android:title="Home" />
        <item
            android:id="@+id/event"
            android:icon="@drawable/event_selector"
            android:title="@string/events" />
        <item
            android:id="@+id/profile"
            android:icon="@drawable/profile_selector"
            android:title="@string/profile" />
        <item
            android:id="@+id/teams"
            android:icon="@drawable/teams_selector"
            android:title="Teams" />
        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_power_settings"
            android:title="@string/logout" />
    </group>

</menu>