<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/white"
    tools:context=".registerprocess.login">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/welcome_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp">


        <TextView
            android:id="@+id/welcome"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/welcome"
            android:textColor="#000"
            android:textSize="40sp"
            app:layout_constraintBottom_toTopOf="@+id/textview2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textview2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/please_sign_in_to_continue"
            android:textColor="#263238"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/username"
        android:textColorHint="@color/grey">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_email"
            android:drawableLeft="@drawable/ic_email"
            android:drawablePadding="10dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:textColor="@color/blue"
            android:textSize="20sp"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/Password"
        android:textColorHint="@color/grey"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableStart="@drawable/ic_lock"
            android:drawableLeft="@drawable/ic_lock"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/Password"
            android:inputType="textPassword"
            android:textColor="@color/blue"
            android:textSize="20sp"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <android.widget.Button
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="10dp"
        android:background="#00000000"
        android:fontFamily="sans-serif-black"
        android:text="@string/forgot_password"
        android:textColor="@color/blue"
        android:textSize="15sp" />

    <android.widget.Button
        android:id="@+id/Sign_in"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/round_design"
        android:fontFamily="sans-serif-black"
        android:text="@string/sign_in"
        android:textColor="@color/white">
    </android.widget.Button>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="5dp">

        <android.widget.TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:layout_gravity="center"
            android:text="@string/note"
            android:textColor="#263238"
            android:textSize="18sp">

        </android.widget.TextView>
        <android.widget.Button
            android:id="@+id/Sign_up"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:text="@string/sign_up"
            android:textColor="@color/blue"
            android:fontFamily="sans-serif-black">

        </android.widget.Button>

    </LinearLayout>


</LinearLayout>