<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_margin="10dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ongoing_event_image"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:scaleType="centerCrop"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/title_bar">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/event_title_ongoing"
                    android:text="@string/event_title"
                    android:textSize="18sp"
                    android:textColor="@color/colorPrimary"
                    android:fontFamily="sans-serif-condensed-medium"/>

                <TextView
                    android:id="@+id/event_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:text="Title"
                    android:textSize="18sp"
                    android:textColor="@color/colorPrimary"
                    android:layout_toRightOf="@id/event_title_ongoing"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:layout_marginStart="2dp"
                    android:layout_toEndOf="@id/event_title_ongoing" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/venue_bar"
                android:layout_below="@id/title_bar"
                android:layout_marginTop="2dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/event_venue_ongoing"
                    android:text="@string/venue"
                    android:textSize="16sp"
                    android:layout_alignParentStart="true"
                    android:textColor="@color/colorPrimary"
                    android:fontFamily="sans-serif"
                    android:layout_alignParentLeft="true" />

                <TextView
                    android:id="@+id/event_venue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:text="Place"
                    android:textSize="16sp"
                    android:textColor="@color/colorPrimary"
                    android:layout_toRightOf="@id/event_venue_ongoing"
                    android:fontFamily="sans-serif"
                    android:layout_marginStart="2dp"
                    android:layout_toEndOf="@id/event_venue_ongoing" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/date_bar"
                android:layout_below="@id/venue_bar"
                android:layout_marginTop="2dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/event_date_ongoing"
                    android:text="@string/date"
                    android:textSize="16sp"
                    android:layout_alignParentStart="true"
                    android:textColor="@color/colorPrimary"
                    android:fontFamily="sans-serif"
                    android:layout_alignParentLeft="true" />

                <TextView
                    android:id="@+id/event_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:text="date"
                    android:textSize="16sp"
                    android:textColor="@color/colorPrimary"
                    android:layout_toRightOf="@id/event_date_ongoing"
                    android:fontFamily="sans-serif"
                    android:layout_marginStart="2dp"
                    android:layout_toEndOf="@id/event_date_ongoing" />

                <TextView
                    android:id="@+id/event_time_ongoing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time"
                    android:textSize="16sp"
                    android:textColor="@color/colorPrimary"
                    android:fontFamily="sans-serif"
                    android:layout_toLeftOf="@id/event_time"
                    android:layout_marginRight="2dp"/>

                <TextView
                    android:id="@+id/event_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="time"
                    android:textSize="16sp"
                    android:textColor="@color/colorPrimary"
                    android:fontFamily="sans-serif"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"/>
            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>